<resources>
    <string name="app_name">COMMAX Setting</string>
    <string name="userAccount">User Account</string>
    <string name="wallpadSetting">Wallpad setting</string>
    <string name="deviceInit">Control device connect initialization</string>
    <string name="dataInit">Data initialization</string>
    <string name="dataInitconfirm">Do you want to process initialization?</string>
    <string name="dataInitWaiting">Initializing...</string>
    <string name="dataInitResult">It is Initialized.</string>
    <string name="doorphoneRegistration">Door Camera Register</string>
    <string name="cctvRegistration">CCTV Register</string>
    <string name="callSetting">Call setting</string>
    <string name="homeSetting">Home theme</string>
    <string name="screensaverSetting">Value information Intro</string>
    <string name="ringtoneSetting">Ringtone</string>
    <string name="wallpadInfo">Wallpad information</string>
    <string name="signUp">Signup</string>
    <string name="changeUserInfo">Changing member information</string>
    <string name="no_signup_id">There is no ID registered.</string>
    <string name="wallpadPassword">Wallpad password</string>
    <string name="dongHo">Dong, Ho</string>
    <string name="not_set">No setting</string>
    <string name="changePasswordTitle">Change password</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="dong">Dong</string>
    <string name="ho">Ho</string>
    <string name="put_in_dong">Please put in dong.</string>
    <string name="put_in_ho">Please put in ho.</string>
    <string name="donghoInpuTitle">Dong, Ho</string>
    <string name="password">Password</string>
    <string name="passwordConfirm">Password confirm</string>
    <string name="put_in_password">Please put in password.</string>
    <string name="put_in_4_digit_password">Please enter the four digit password.</string>
    <string name="password_is_not_same">The passworde does not match.</string>
    <string name="init_device_help_text">All the information of IoT control device\nconnected to Wallpad and Mobile app will be initialized.\nAfter initializing,\nindividual device can be controlled\nbut previously registered scene \nand scenario control will be deleted.</string>
    <string name="init_data_help_text">You can not restore the data\nafter processing initialization. \n\n[Initialization list]\n-Call Log\n-Stored video\n-Emergency Log</string>
    <string name="init">Initialization</string>
    <string name="registration_help_text">If you press bell button of door camera for 5 seconds, door camera information will be displayed.</string>
    <string name="registration_preview_help_text">The Camera can be previewed before registration.</string>
    <string name="registration">Registration</string>
    <string name="saved_setting_already">It is already saved in setting.</string>
    <string name="not_same_sync">The sync value does not match.</string>
    <string name="registered">It is registered.</string>
    <string name="choose_camera">Please choose the camera.</string>
    <string name="preview">Preview</string>
    <!--<string name="wallpad_password_hint">Wallpad password for emergency, security and setting etc.</string>-->
    <string name="wallpad_password_hint">Password for emergency, security and setting etc.</string>
    <string name="callTime">Continuous call time</string>
    <string name="movieRecordTime">Video recording time</string>
    <string name="autoRecord">Video autosave</string>
    <string name="smartPhoneCall">Allow smartphone incoming call</string>
    <!--<string name="smartPhoneCallHint">When the visitor push the door button, communicate via Smartphone.</string>-->
    <string name="smartPhoneCallHint">Push the door button, communicate via Smartphone.</string>
    <string name="callTimeHint">30 ~ 180 seconds</string>
    <string name="callTimeUnit_sec">seconds</string>
    <string name="callTimeUnit_min">minutes</string>
    <string name="put_in_time">Please put in time.</string>
    <string name="movieRecordTimeHint">10~60 seconds</string>
    <string name="homeTheme">Home screen default theme</string>
    <string name="showScreensaver">Show intro</string>
    <string name="screensaver_time_setting">Time setting</string>
    <string name="application">Application</string>
    <string name="loading_application">Application Loading...</string>
    <string name="systemVersion">System version</string>
    <string name="bootloaderVersion">Bootloader version</string>
    <string name="kernelVersion">Kernel version</string>
    <string name="buildNo">Build number</string>
    <string name="androidVersion">Android version</string>
    <string name="app_is_not_installed">App is not installed.</string>
    <string name="scanning_camera">Camera scanning...</string>
    <string name="commax_application">Commax apps</string>
    <string name="tabletInfo">Tablet info</string>
    <string name="userId">User Id</string>
    <string name="settingTitle">Wallpad Setting</string>
    <string name="saved">Saved.</string>
    <string name="not_saved">Not saved.</string>
    <string name="put_in_name">Please put in name.</string>
    <string name="select_all">Select All</string>
    <string name="deviceServerIp">Device Server IP</string>
    <string name="deviceServerIpInpuTitle">Device Sever IP</string>
    <string name="updateServerIp">Update Server IP</string>
    <string name="updateServerIpInpuTitle">Update Sever IP</string>
    <string name="localServerIp">Local Server IP</string>
    <string name="localServerIpInpuTitle">Local Server IP</string>
    <string name="ip">IP</string>
    <string name="put_in_device_server_ip">Please put in ip address.</string>
    <string name="password_saved">Password is changed.</string>
    <string name="commax">Commax</string>
    <string name="system">System</string>
    <string name="others">Others</string>
    <string name="device_reset_success">Control devices have initialize</string>
    <string name="front_door">Front door</string>
    <string name="extension">Extension</string>
    <string name="guard">Guard</string>
    <string name="pstn">PSTN</string>
    <string name="public_area">Public area</string>
    <string name="title_ringtone_popup">Ringtone</string>
    <string name="ringtone">Ringtone</string>
    <string name="fail_change_ringtone">The ringtone has not been changed.</string>
    <string name="registered_doorphone_camera">Registered Door Camera</string>
    <string name="check_delete">Do you want to delete?</string>
    <string name="delete">Delete</string>
    <string name="deleted">Deleted</string>
    <string name="register_doorphone_camera">Door Camera Register</string>
    <string name="found_doorphone_camera">Door Camera</string>
    <string name="scanned_doorphone_camera">Found Door Camera</string>
    <string name="doorphone_camera_not_found">There is no door camera searched.</string>
    <string name="cctv_camera_not_found">There is no CCTV camera searched.</string>
    <string name="edit">Edit</string>
    <string name="reconfigure">Reconfigure</string>
    <string name="register_cctv_camera">CCTV camera Register</string>
    <string name="registered_cctv_camera">Registered CCTV camera</string>
    <string name="unregistered_cctv_camera">Unregistered CCTV camera</string>
    <string name="ipConfig">IP Config</string>
    <string name="edit_doorphone_camera">Door Camera Edit</string>
    <string name="edit_help_text_doorphone_camera">Choose the door camera and change the name.</string>
    <string name="delete_doorphone_camera">Door Camera Delete</string>
    <string name="delete_help_text_doorphone_camera">Choose the door camera you want to delete.</string>
    <string name="registration_doorphone_camera">Door Camera Register</string>
    <string name="unregistered_doorphone_camera">Unregistered Door Camera</string>
    <string name="autoMode">AUTO</string>
    <string name="dhcpMode">DHCP</string>
    <string name="staticMode">STATIC</string>
    <string name="ip_config">IP config</string>
    <string name="ipaddress">IP address</string>
    <string name="subnetmask">Subnet mask</string>
    <string name="gateway">Gateway</string>
    <string name="dns">DNS</string>
    <string name="title_edit_cctv">CCTV Camera Edit</string>
    <string name="edit_help_text_cctv">Choose the CCTV camera and change the name.</string>
    <string name="title_delete_cctv">CCTV Camera Delete</string>
    <string name="delete_help_text_cctv">Choose the CCTV camera you want to delete.</string>
    <string name="unregistered_cctv">Unregistered CCTV camera</string>
    <string name="found_cctv">Found CCTV camera</string>
    <string name="preview_cctv_error">Can not connect to CCTV camera.</string>
    <string name="deleteCctvPopupTitle">CCTV Camera Delete</string>
    <string name="deleteDoorphoneCameraPopupTitle">Door Camera Delete</string>
    <string name="cctvIdPasswordPopupTitle">CCTV security information</string>
    <string name="id">Id</string>
    <string name="passcode_input">Password input</string>
    <string name="wallpad_update">Wallpad Update</string>
    <string name="dongHo_help">You must reboot after changing the value.</string>
    <string name="device_selected">  items was selected.</string>
    <string name="phoneNumber">Number</string>
    <string name="guardPhoneNumber">Guard Phone Number</string>
    <string name="managementPhoneNumber">Management Office Phone Number</string>
    <string name="put_in_phonenumber">put in Phone Number.</string>
    <string name="homescreen_tip">Show home screen help</string>
</resources>
