<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical">


    <!--등록된 CCTV 카메라 리스트-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/camera_title_height"
        android:background="#f0f1f9"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <com.commax.settings.font.NotoMediumTextView
            android:layout_width="0px"
            android:layout_height="@dimen/camera_title_height"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/camera_title_left_margin"
            android:text="@string/registered_cctv_camera"
            android:textColor="#6b71cc"
            android:textSize="@dimen/camera_title_text_size" />

        <com.commax.settings.font.NotoRegularButton
            android:id="@+id/edit"
            android:layout_width="@dimen/camera_edit_btn_width"
            android:layout_height="@dimen/camera_edit_btn_height"
            android:layout_marginRight="@dimen/camera_edit_btn_right_margin"
            android:background="@drawable/common_button_selector"
            android:enabled="false"
            android:text="@string/edit"
            android:textColor="@drawable/common_button_text_color_selector"
            android:textSize="@dimen/camera_edit_btn_text_size" />

    </LinearLayout>

    <ListView
        android:id="@+id/registeredCctvList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@drawable/list_divider"
        android:dividerHeight="@dimen/camera_divider_list_height" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/camera_divider_item_height"
        android:background="#d8d9e0" />


    <LinearLayout
        android:id="@+id/registerCctv"
        android:layout_width="match_parent"
        android:layout_height="@dimen/camera_add_box_height"
        android:background="@drawable/main_menu_background_selector"
        android:gravity="center">

        <ImageView
            android:layout_width="@dimen/camera_add_icon_width"
            android:layout_height="@dimen/camera_add_icon_height"
            android:background="@drawable/ic_mode_add_n" />

        <com.commax.settings.font.NotoRegularTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/camera_add_icon_left_margin"
            android:text="@string/register_cctv_camera"
            android:textColor="#6a71cc"
            android:textSize="@dimen/camera_add_btn_text_size" />


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/camera_divider_item_height"
        android:background="#d8d9e0" />


</LinearLayout>