<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/popup_dlg_normal_width"
    android:layout_height="@dimen/popup_dlg_normal_height"
    android:background="@drawable/bg_popup"
    android:orientation="vertical">

    <com.commax.settings.font.NotoMediumTextView
        android:id="@+id/progress_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/popup_title_top_margin"
        android:gravity="center_horizontal"
        android:text="@string/movieRecordTime"
        android:textColor="#818294"
        android:textSize="@dimen/popup_title_text_size" />

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="@dimen/popup_divider_height"
        android:layout_below="@id/progress_title"
        android:layout_marginLeft="@dimen/popup_divider_side_margin"
        android:layout_marginRight="@dimen/popup_divider_side_margin"
        android:layout_marginTop="@dimen/popup_divider_top_margin"
        android:background="#ebecf0" />

    <!--동호 입력부분-->


    <LinearLayout
        android:id="@+id/inputBody"
        android:layout_width="match_parent"
        android:layout_height="@dimen/popup_body_normal_height"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/line"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="@dimen/popup_input_item_height"
                android:gravity="center_vertical"
                android:orientation="horizontal">


                <com.commax.settings.font.NotoRegularEditText
                    android:id="@+id/movieRecordTimeInput"
                    android:layout_width="@dimen/popup_calltime_item_width"
                    android:layout_height="@dimen/popup_input_item_height"
                    android:background="#00000000"
                    android:gravity="center"
                    android:hint="@string/movieRecordTimeHint"
                    android:inputType="number" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="@dimen/popup_divider_height"
                android:orientation="horizontal">


                <View
                    android:layout_width="@dimen/popup_calltime_item_width"
                    android:layout_height="@dimen/popup_divider_height"
                    android:background="#8489d5" />
            </LinearLayout>


        </LinearLayout>


    </LinearLayout>


    <View
        android:id="@+id/line2"
        android:layout_width="@dimen/popup_yesno_topline_width"
        android:layout_height="@dimen/popup_divider_height"
        android:layout_below="@id/inputBody"
        android:layout_marginLeft="@dimen/popup_yesno_topline_side_margin"
        android:layout_marginTop="@dimen/popup_yesno_topline_top_margin"
        android:background="#ebecf0" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/popup_yesno_box_height"
        android:layout_below="@id/line2"
        android:layout_marginBottom="@dimen/popup_yesno_updown_margin"
        android:layout_marginTop="@dimen/popup_yesno_updown_margin"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <com.commax.settings.font.NotoRegularButton
            android:id="@+id/cancel"
            android:layout_width="@dimen/popup_yesno_btn_width"
            android:layout_height="@dimen/popup_yesno_btn_height"
            android:background="@drawable/cancel_button_selector"
            android:text="@string/cancel"
            android:textColor="@drawable/cancel_button_text_color_selector"
            android:textSize="@dimen/popup_item_text_size"
            android:textAllCaps="false" />

        <com.commax.settings.font.NotoRegularButton
            android:id="@+id/confirm"
            android:layout_width="@dimen/popup_yesno_btn_width"
            android:layout_height="@dimen/popup_yesno_btn_height"
            android:layout_marginLeft="@dimen/popup_yesno_btn_margin"
            android:background="@drawable/common_button_selector"
            android:text="@string/confirm"
            android:textColor="@drawable/common_button_text_color_selector"
            android:textSize="@dimen/popup_item_text_size"
            android:textAllCaps="false" />

    </LinearLayout>


</RelativeLayout>